yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: designer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: designer
  template:
    metadata:
      labels:
        name: designer
    spec:
      containers:
      - name: designer
        image: docker.io/freegroup/thindexed-designer:0.1.0-69
