yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: designer
  namespace: default
spec:
  hosts: ["<DOMAIN>"]
  #hosts: ["app.thindexed.personal.shoot.canary.k8s-hana.ondemand.com"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          exact: "/designer"
      redirect:
        uri: "/designer/"
    - match:
      - uri:
          prefix: "/designer/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: designer
